style: increase bottom padding to prevent legal note from being cut off on mobile devices

--- a/src/app/components/config-panel/config-panel.component.scss
+++ b/src/app/components/config-panel/config-panel.component.scss
@@ -7,7 +7,7 @@
   height: 100%;
 }
 .config-container {
-  padding: 12px 24px 24px 24px;
+  padding: 12px 24px 48px 24px;
 }
 
 
